# PolarUV-controller

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  README.md  controller.ioc
Core/Inc/: Motors.hpp  MotorsStruct.hpp  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  usart.h
Core/Src/: Motors.cpp  dma.c  gpio.c  main.c  main.cpp  spi.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  tim.c  usart.c
DataStructs/: CMakeLists.txt  ClientSettingsStruct.cpp  DataStructs.hpp  RobotSettingsStruct.cpp  VideoPipelineStruct.cpp
DataStructs/ClientSettingsStruct/: ClientSettingsStruct.hpp
DataStructs/MotorsStruct/: MotorsStruct.hpp
DataStructs/RobotSettingsStruct/: RobotSettingsStruct.hpp
DataStructs/VideoPipelineStruct/: VideoPipelineStruct.hpp
